[JBTM-3203] workaround: disabling XTS over SSL until WFLY bom is with jakarta dependency is released

--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -44,6 +44,6 @@
     <module>raw-xts-api-demo</module>
     <module>wsat-jta-multi_service</module>
     <module>wsat-jta-multi_hop</module>
-    <module>ssl</module>
+    <!--<module>ssl</module> temporarily disabled, see JBTM-3203 -->
   </modules>
 </project>
