--- a/rts/lra-examples/lra-coordinator/pom.xml
+++ b/rts/lra-examples/lra-coordinator/pom.xml
@@ -85,6 +85,7 @@
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>lra-coordinator-thorntail</artifactId>
             <version>${project.version}</version>
+            <classifier>thorntail</classifier>
         </dependency>
     </dependencies>
 </project>
