--- a/at/bridge/pom.xml
+++ b/at/bridge/pom.xml
@@ -68,8 +68,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
             <version>${version.javax.ws.rs-api}</version>
             <scope>provided</scope>
         </dependency>
