--- a/rts/lra/trip-client/pom.xml
+++ b/rts/lra/trip-client/pom.xml
@@ -25,6 +25,7 @@
 
         <version.resteasy-client>3.1.3.Final</version.resteasy-client>
         <version.narayana>5.10.1.Final-SNAPSHOT</version.narayana>
+        <version.jackson>2.9.10.1</version.jackson>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -70,7 +71,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>[2.9.10,)</version>
+            <version>${version.jackson}</version>
         </dependency>
     </dependencies>
 </project>
