--- a/jca-and-tomcat/pom.xml
+++ b/jca-and-tomcat/pom.xml
@@ -56,7 +56,6 @@
         <version.org.jboss.slf4j>1.0.0.GA</version.org.jboss.slf4j>
         <version.org.jboss.naming>5.0.3.GA</version.org.jboss.naming>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
-        <version.log4j>1.2.17</version.log4j>
         <version.org.jboss.papaki>1.0.0.Beta3</version.org.jboss.papaki>
         <version.org.picketbox>4.0.18.Final</version.org.picketbox>
         <version.org.jgroups>3.2.7.Final</version.org.jgroups>
@@ -317,10 +316,52 @@
             <artifactId>juel-spi</artifactId>
             <version>${version.de.odysseus.juel}</version>
         </dependency>
+
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${version.log4j}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jboss.logmanager</groupId>
