--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -353,6 +353,7 @@
               </execution>
             </executions>
             <configuration>
+              <source>8</source>
               <detectOfflineLinks>false</detectOfflineLinks>
             </configuration>
           </plugin>
